feat: add text converter and weapon prompts
- Add text converter tool for multiline to single line conversion
- Add router setup for /converter path
- Add raw prompts and placeholders for all weapons
- Rename '质疑之锤' to '质疑之锥'
- Update dependencies (vue-router, vue)
- Remove HelloWorld component
- Fix favicon

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@arco-design/web-vue": "^2.56.3",
     "@vueuse/core": "^12.0.0",
-    "vue": "^3.5.12"
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
